#26 solve GAP

--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -3,13 +3,12 @@
   width 100%
   margin-top 82px
 .aguaviento-header
-  width 100% !important
   height 442px !important
   position relative
 .header-prev, .header-next
   display none !important
 .oval-box
-  position realtive 
+  position realtive
   width 508px
 .header-first-oval
   width 508px
@@ -22,13 +21,13 @@
   height 437px
   position absolute
   left 0px
-  bottom 0px 
+  bottom 0px
 .header-last-oval
   width 195px
   height 140px
   position absolute
   left 296px
-  bottom 0px 
+  bottom 0px
 .header-text-info
    font-size 29px
    padding-bottom 6px
@@ -58,7 +57,6 @@
   left 86px
   top 156px
 .aguaviento-header.one
-  width 100vw !important
   height 442px !important
   background url("../img/foto-de-atras@3x.png")
   background-attachment scroll
@@ -66,7 +64,6 @@
   background-size cover
   background-position center bottom
 .aguaviento-header.two
-  width 100vw !important
   height 442px !important
   background url("../img/manos.jpg")
   background-attachment scroll
@@ -74,7 +71,6 @@
   background-size cover
   background-position right center
 .aguaviento-header.three
-  width 100vw !important
   height 442px !important
   background url("../img/group-24@3x.png")
   background-attachment scroll
@@ -221,7 +217,7 @@
 .hover-nice-blue:hover
   background-color #3d8fc7
 .first-section-feature-button-text
-  font-size 10px 
+  font-size 10px
 .first-section-oval-image
   width 155px
   height 225px
@@ -351,7 +347,7 @@
   font-size 16px
 .nice-blue-divider
   height 1px
-  background-color #0d74b9 
+  background-color #0d74b9
 .nice-blue-divider.third-section
   width 594px
   margin-top 52px
@@ -412,7 +408,7 @@
 .modal-open
   display block !important
 
-#body.modal-open 
+#body.modal-open
   overflow hidden
 
 .modal
@@ -429,7 +425,7 @@
 .close-modal-img
   width 23px
   height 20px
-.modal-content 
+.modal-content
   background-color #f5f5f5
   margin 10% auto
   padding 0px
@@ -442,14 +438,14 @@
   right -30px
   top -40px
 
-.close 
+.close
   color #f5f5f5
   float right
   font-size: 20px
   font-weight lighter
 
 .close:hover,
-.close:focus 
+.close:focus
   color #f5f5f5
   text-decoration none
   cursor pointer
@@ -506,7 +502,7 @@
   width 378px
 .modal-service-image.one
   width 376px
-  height 238px 
+  height 238px
   background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
   background-attachment scroll
   background-repeat no-repeat
@@ -514,7 +510,7 @@
   background-position center top
 .modal-service-image.two
   width 376px
-  height 238px 
+  height 238px
   background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
   background-attachment scroll
   background-repeat no-repeat
@@ -522,7 +518,7 @@
   background-position center top
 .modal-service-image.three
   width 376px
-  height 238px 
+  height 238px
   background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
   background-attachment scroll
   background-repeat no-repeat
@@ -554,7 +550,7 @@
   padding 0
   list-style none
   text-align center
-.slick-dots li 
+.slick-dots li
   position relative
   display inline-block
   width 20px
@@ -562,7 +558,7 @@
   margin 0 0
   padding 0
   cursor pointer
-.slick-dots li button 
+.slick-dots li button
   font-size 0
   line-height 0
   display block
@@ -574,7 +570,7 @@
   border 0
   outline none
   background transparent
-.slick-dots li.slick-active button::before 
+.slick-dots li.slick-active button::before
   font-family slick
   font-size 27px
   line-height 20px
@@ -602,4 +598,3 @@
   opacity 0.25
   color #ffffff
   -webkit-font-smoothing antialiased
-    
